--- a/styles.css
+++ b/styles.css
@@ -52,14 +52,11 @@ div.listWraper > div > ul {
     cursor: pointer;
     background-color: rgb(30, 180, 245);
     font-size: 40px;
-    width: 53px;
-    height: 53px;
+    width: 56px;
+    height: 56px;
     color: white;
     text-align: center;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
+    border-radius: 50%;
 }
 .topLine {
     width: 100%;
@@ -81,28 +78,42 @@ div.listWraper > div > ul {
     cursor: pointer;
     background-color: #c00;
     font-size: 40px;
-    width: 53px;
-    height: 53px;
+    width: 50px;
+    height: 50px;
     color: white;
     text-align: center;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
+    border-radius: 50%;
 }
 #webSiteHedding {
     display: inline-block;
     margin: 0;
     margin-top: 4%;
 }
-#searchWords {
+.beginingSearchWords {
     text-align: center;
     margin: 10%;
+    border: 0;
+    background-color: rgb(30, 180, 245);
+}
+.beginingSearchWords::-webkit-input-placeholder {
+    color: #c00;
+    font-size: 125%;
+}
+.searchWords {
+    text-align: center;
+    margin: 10%;
+    border: 1px solid #c00;
+    background-color: white;
 }
 #ulWraper {
     background-color: rgb(30, 180, 245);
-    flex: 15;
+    flex: 20;
     display: none;
+}
+#ulWraper1 {
+    background-color: rgb(30, 180, 245);
+    flex: 20;
+    margin-top: -50px;
 }
 .title {
     display: flex;
@@ -124,4 +135,12 @@ div.listWraper > div > ul {
 .sortListBy {
     background-color: #89f77b;
     color: #c00;
+}
+.theNameInBig {
+    font-size: 250%;
+    color: #c00;
+    margin-bottom: 5px;
+}
+.topLine2 {
+    padding-bottom: 10px;
 }
